[package]
name = "hyperactive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
hyper = { version = "0.14.18", features = ["full"] }
serde = { version="1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.17.0", features = ["full"] }
tokio-postgres = "0.7.5"
url = "2.2.2"


