[package]
name = "hyperactive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "mini_server"
path = "examples/mini_server.rs"

[dependencies]
bytes = "1.1.0"
hyper = { version = "0.14.23", features = ["full"] }
serde = { version="1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1.22.0", features = ["full"] }
url = "2.2.2"

